--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,3 +5,5 @@ app.domainCount=10
 
 # Redirect HTTP requests to HTTPS
 app.ssl.redirect = false
+
+# Filter class « https://stackoverflow.com/q/19825946/5081877
